<resources>
    <string name="app_name">FootballLeague</string>
    <string name="league_name">Premier League</string>
    <string name="detail">Liga ingrris adalah liga yang sangat keras</string>
    <string name="date_match">2019 11 03</string>
    <string name="score">3</string>
    <string name="vs">VS</string>
    <string-array name="name_list">
        <item>English Premier League</item>
        <item>French Ligue 1</item>
        <item>German Bundesliga</item>
        <item>Italian Serie A</item>
        <item>Spanish La Liga</item>
        <item>American Mayor League</item>
        <item>Portugeuese Premiera Liga</item>
        <item>Australian A League</item>
        <item>Scotish Premier League</item>
        <item>English League 1</item>
    </string-array>
    <array name="image_list">
        <item>@drawable/english_premier_league</item>
        <item>@drawable/french_ligue_1</item>
        <item>@drawable/german_bundesliga</item>
        <item>@drawable/italian_serie_a</item>
        <item>@drawable/spanish_la_liga</item>
        <item>@drawable/american_mayor_league</item>
        <item>@drawable/portugeuese_premiera_liga</item>
        <item>@drawable/australian_a_league</item>
        <item>@drawable/scotish_premier_league</item>
        <item>@drawable/english_league_1</item>
    </array>
    <string-array name="id_league">
        <item>4328</item>
        <item>4334</item>
        <item>4331</item>
        <item>4332</item>
        <item>4335</item>
        <item>4346</item>
        <item>4344</item>
        <item>4356</item>
        <item>4330</item>
        <item>4396</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="bt_team">Team</string>
    <string name="bt_match">Match</string>
    <string name="date_tv">14-06-1880</string>
    <string name="name_team">Liverpool</string>
    <string name="score_team">2</string>
    <string name="gk_name">Petr Cech</string>
    <string name="goal_keeper">Goal Keeper</string>
    <string name="defender">Defender</string>
    <string name="midfielder">Midfielder</string>
    <string name="striker">Striker</string>
    <string name="substitution">Substitution</string>
    <string name="search">search</string>
    <string name="bt_league">League</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="favorites">Favorite</string>
    <string name="team">Team</string>
    <string name="play">Play</string>
    <string name="win">Win</string>
    <string name="draw">Draw</string>
    <string name="gf">GF</string>
    <string name="ga">GA</string>
    <string name="gd">GD</string>
    <string name="lose">Lose</string>
</resources>
