<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragment.TableFragment">

    <!-- TODO: Update blank fragment layout -->
    <androidx.cardview.widget.CardView
        android:id="@+id/cardView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="15dp"
            android:textAlignment="center">


            <TextView
                android:id="@+id/tv_name_fg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="56dp"
                android:layout_marginTop="28dp"
                android:text="@string/team"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_play_fg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="28dp"
                android:text="@string/play"
                app:layout_constraintStart_toEndOf="@+id/tv_name_fg"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_win_fg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="28dp"
                android:text="@string/win"
                app:layout_constraintStart_toEndOf="@+id/tv_play_fg"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_draw_fg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="28dp"
                android:text="@string/draw"
                app:layout_constraintStart_toEndOf="@+id/tv_win_fg"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_lose_fg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="28dp"
                android:text="@string/lose"
                app:layout_constraintStart_toEndOf="@+id/tv_draw_fg"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_gf_fg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="28dp"
                android:text="@string/gf"
                app:layout_constraintStart_toEndOf="@+id/tv_lose_fg"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_ga_fg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="28dp"
                android:text="@string/ga"
                app:layout_constraintStart_toEndOf="@+id/tv_gf_fg"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_gd_fg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="28dp"
                android:text="@string/gd"
                app:layout_constraintStart_toEndOf="@+id/tv_ga_fg"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_table"
        android:layout_width="match_parent"
        tools:listitem="@layout/item_table"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView3"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>