<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="200dp">

            <TextView
                android:id="@+id/tv_date_match"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/date_match"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.501"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/bdg_home"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="12dp"
                android:src="@color/colorPrimary"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_date_match" />

            <TextView
                android:id="@+id/score_home_dtl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="44dp"
                android:text="@string/score"
                android:textSize="15sp"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@+id/bdg_home"
                app:layout_constraintTop_toBottomOf="@+id/tv_date_match" />

            <TextView
                android:id="@+id/vs"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="44dp"
                android:text="@string/vs"
                android:textSize="15sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@+id/score_away_dtl"
                app:layout_constraintHorizontal_bias="0.075"
                app:layout_constraintStart_toEndOf="@+id/score_home_dtl"
                app:layout_constraintTop_toBottomOf="@+id/tv_date_match" />

            <TextView
                android:id="@+id/score_away_dtl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="44dp"
                android:layout_marginEnd="20dp"
                android:text="@string/score"
                android:textSize="15sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@+id/bdg_away"
                app:layout_constraintTop_toBottomOf="@+id/tv_date_match" />

            <ImageView
                android:id="@+id/bdg_away"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="16dp"
                android:src="@color/colorPrimary"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_date_match" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:paddingBottom="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView"
        tools:ignore="MissingConstraints">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/str_gk_home"
                android:layout_width="65dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/gk_name"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/str_gk_away"
                android:layout_width="65dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:text="@string/gk_name"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/str_def_home"
                android:layout_width="65dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="20dp"
                android:text="@string/gk_name"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/str_gk_home" />

            <TextView
                android:id="@+id/str_def_away"
                android:layout_width="65dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="16dp"
                android:text="@string/gk_name"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/str_gk_away" />

            <TextView
                android:id="@+id/str_mid_home"
                android:layout_width="65dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="20dp"
                android:text="@string/gk_name"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/str_def_home" />

            <TextView
                android:id="@+id/str_mid_away"
                android:layout_width="65dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="16dp"
                android:text="@string/gk_name"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/str_def_away" />

            <TextView
                android:id="@+id/str_stt_home"
                android:layout_width="65dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="20dp"
                android:text="@string/gk_name"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/str_mid_home" />

            <TextView
                android:id="@+id/str_stt_away"
                android:layout_width="65dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="16dp"
                android:text="@string/gk_name"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/str_mid_away" />

            <TextView
                android:id="@+id/str_sub_away"
                android:layout_width="65dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="16dp"
                android:text="@string/gk_name"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/str_stt_away" />

            <TextView
                android:id="@+id/str_sub_home"
                android:layout_width="65dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="20dp"
                android:text="@string/gk_name"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/str_stt_home" />

            <TextView
                android:id="@+id/tv1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/goal_keeper"
                android:textAlignment="center"
                app:layout_constraintEnd_toStartOf="@+id/str_gk_away"
                app:layout_constraintStart_toEndOf="@+id/str_gk_home"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/defender"
                android:textAlignment="center"
                app:layout_constraintEnd_toStartOf="@+id/str_def_away"
                app:layout_constraintStart_toEndOf="@+id/str_def_home"
                app:layout_constraintTop_toBottomOf="@+id/tv1" />

            <TextView
                android:id="@+id/tv3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/midfielder"
                android:textAlignment="center"
                app:layout_constraintEnd_toStartOf="@+id/str_mid_away"
                app:layout_constraintStart_toEndOf="@+id/str_mid_home"
                app:layout_constraintTop_toBottomOf="@+id/tv2" />

            <TextView
                android:id="@+id/tv4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/striker"
                android:textAlignment="center"
                app:layout_constraintEnd_toStartOf="@+id/str_stt_away"
                app:layout_constraintStart_toEndOf="@+id/str_stt_home"
                app:layout_constraintTop_toBottomOf="@+id/tv3" />

            <TextView
                android:id="@+id/tv5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/substitution"
                android:textAlignment="center"
                app:layout_constraintEnd_toStartOf="@+id/str_sub_away"
                app:layout_constraintStart_toEndOf="@+id/str_sub_home"
                app:layout_constraintTop_toBottomOf="@+id/tv4" />

        </ScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>