<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:padding="10dp"
            android:textAlignment="center"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginStart="15dp"
                android:layout_marginTop="24dp"
                android:contentDescription="@string/league_name"
                android:src="@color/colorAccent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="28dp"
                android:text="@string/name_team"
                app:layout_constraintStart_toEndOf="@+id/imageView"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_play"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="28dp"
                android:text="@string/score"
                app:layout_constraintStart_toEndOf="@+id/tv_name"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_win"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="34dp"
                android:layout_marginTop="28dp"
                android:text="@string/score_team"
                app:layout_constraintStart_toEndOf="@+id/tv_play"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_draw"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="34dp"
                android:layout_marginTop="28dp"
                android:text="@string/score_team"
                app:layout_constraintStart_toEndOf="@+id/tv_win"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_lose"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="34dp"
                android:layout_marginTop="28dp"
                android:text="@string/score"
                app:layout_constraintStart_toEndOf="@+id/tv_draw"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_gf"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="34dp"
                android:layout_marginTop="28dp"
                android:text="@string/score"
                app:layout_constraintStart_toEndOf="@+id/tv_lose"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_ga"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="34dp"
                android:layout_marginTop="28dp"
                android:text="@string/score"
                app:layout_constraintStart_toEndOf="@+id/tv_gf"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_gd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="28dp"
                android:text="@string/score_team"
                app:layout_constraintStart_toEndOf="@+id/tv_ga"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>